update notebooks only

--- a/emo_nbs/06_messenger.ipynb
+++ b/emo_nbs/06_messenger.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8dc4c24e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#default_exp messenger"
+    "#adefault_exp messenger"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "756c27f5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "391b30a8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "17900098",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-a64c2faaa62e>:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "<ipython-input-4-a64c2faaa62e>:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -110,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6478bfa0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#這邊要輸入對話框的ID\n",
     "# 這個倒是不會變 (應該拉)\n",
-    "ChatID = '12345678'#實際點進一個對話框，看他的網址最後面那一串數字就是了\n",
+    "ChatID = input(\"ChatID: \")#實際點進一個對話框，看他的網址最後面那一串數字就是了\n",
     "driver.get(\"https://www.facebook.com/messages/t/\"+ChatID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "748ea60c",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "eee92408",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "'\\n#進去之後就要去Get他對話裡面的Text，我的做法是用F12進去找他對話的xpath，然後直接複製過來\\n# p1: 絕對的\\np1 = \\'//*[@id=\"jsc_c_2v\"]/div/div/div[15]/div/div/div[1]/div[2]/div[1]/div[1]/div[1]/span/div[2]/div[1]/div/div\\'\\ndialogTxt = driver.find_element(By.XPATH,p1)\\ndialogTxt.text, dialogTxt.tagname\\n'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,18 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "e25fdcf3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 相對的XPath\n",
-    "text_list = driver.find_elements(By.XPATH,'//*[contains(text(), \"六\")]')"
+    "text_list = driver.find_elements(By.XPATH,'//*[contains(text(), \"六日\")]')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "0af67384",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "男六輔導員肥宅之日本型男亂源之二 諧音爛梗王: 去哪\n",
       "六日的話目前可配合你的時間\n"
      ]
     }
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "46a65480",
    "metadata": {},
    "outputs": [],
@@ -232,17 +231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "82d11f95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'瘦仙貝\\n瘦仙貝\\nsent a photo.\\n  ·\\n57m'"
+       "'瘦仙貝\\nYou: 你這個胖可愛\\n  ·\\n20m'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "b012fa57",
    "metadata": {},
    "outputs": [],
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "46687c02",
    "metadata": {},
    "outputs": [
@@ -273,7 +272,7 @@
        "11"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "8f55137d",
    "metadata": {},
    "outputs": [
@@ -338,6 +337,385 @@
    "metadata": {},
    "source": [
     "![xpath_one.png](attachment:xpath_one.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e238f247",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你好 我在臉書的租屋版看到你的貼文 請問現在可以預約看房嗎？ div\n",
+      "可以 div\n",
+      "你要約什麼時間看房 div\n",
+      "目前更新如下 div\n",
+      "台南東區近成大和火車站勝利路套房出租(可寵)\n",
+      "#有配合社會住宅 #東區套房 #可申請租金補助\n",
+      "【位置】:台南市東區勝利路171巷     \n",
+      "1.【租金】6500【特殊資格有打折】7月底前看房當天下訂金，月租6300元。\n",
+      "2.【類型】 :公寓\n",
+      "3.【格局】 :獨立套房\n",
+      "4.【電費】台電\n",
+      "5.【水費】 台水\n",
+      "6.【寵物】可\n",
+      "7.【設備】熱水器.冷氣.冰箱 電視 洗衣機\n",
+      "廁所和房間都有對外窗，在3樓無電梯。\n",
+      "8.可寵，需房東同意的寵物，租金會加500到1000元，需簽寵物條款。\n",
+      "9.7/16已全屋清潔打掃過。\n",
+      "\n",
+      "育樂街旁 成大對面 火車站【3分】鬧區 學區 \n",
+      "歡迎在台南就業或就學的朋友來看屋，即日起可看房。\n",
+      "請洽兆基業務吳小姐，Line【0952744440】或私訊我。 div\n",
+      "請問下禮拜什麼時間有空呢？ div\n",
+      "今天可以喔 div\n",
+      "平日晚上7點後也可以 div\n",
+      "六日的話目前可配合你的時間 div\n",
+      "好的我再回覆你 div\n",
+      "謝謝 div\n"
+     ]
+    }
+   ],
+   "source": [
+    "# random\n",
+    "# dir='auto' has a very high chance of being a part of dialogue\n",
+    "tmplist2 = driver.find_elements(By.XPATH, \"//div[@dir='auto']\")\n",
+    "for ele in tmplist2:\n",
+    "    print(ele.text, ele.tag_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f7ccb470",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abstractmethods__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_abc_impl',\n",
+       " '_execute',\n",
+       " '_id',\n",
+       " '_parent',\n",
+       " '_upload',\n",
+       " 'accessible_name',\n",
+       " 'aria_role',\n",
+       " 'clear',\n",
+       " 'click',\n",
+       " 'find_element',\n",
+       " 'find_elements',\n",
+       " 'get_attribute',\n",
+       " 'get_dom_attribute',\n",
+       " 'get_property',\n",
+       " 'id',\n",
+       " 'is_displayed',\n",
+       " 'is_enabled',\n",
+       " 'is_selected',\n",
+       " 'location',\n",
+       " 'location_once_scrolled_into_view',\n",
+       " 'parent',\n",
+       " 'rect',\n",
+       " 'screenshot',\n",
+       " 'screenshot_as_base64',\n",
+       " 'screenshot_as_png',\n",
+       " 'send_keys',\n",
+       " 'shadow_root',\n",
+       " 'size',\n",
+       " 'submit',\n",
+       " 'tag_name',\n",
+       " 'text',\n",
+       " 'value_of_css_property']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(tmplist2[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3def1d72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abstractmethods__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__enter__',\n",
+       " '__eq__',\n",
+       " '__exit__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_abc_impl',\n",
+       " '_authenticator_id',\n",
+       " '_file_detector',\n",
+       " '_get_cdp_details',\n",
+       " '_is_remote',\n",
+       " '_mobile',\n",
+       " '_shadowroot_cls',\n",
+       " '_switch_to',\n",
+       " '_unwrap_value',\n",
+       " '_web_element_cls',\n",
+       " '_wrap_value',\n",
+       " 'add_cookie',\n",
+       " 'add_credential',\n",
+       " 'add_virtual_authenticator',\n",
+       " 'application_cache',\n",
+       " 'back',\n",
+       " 'bidi_connection',\n",
+       " 'capabilities',\n",
+       " 'caps',\n",
+       " 'close',\n",
+       " 'command_executor',\n",
+       " 'create_options',\n",
+       " 'create_web_element',\n",
+       " 'current_url',\n",
+       " 'current_window_handle',\n",
+       " 'delete_all_cookies',\n",
+       " 'delete_cookie',\n",
+       " 'delete_network_conditions',\n",
+       " 'desired_capabilities',\n",
+       " 'error_handler',\n",
+       " 'execute',\n",
+       " 'execute_async_script',\n",
+       " 'execute_cdp_cmd',\n",
+       " 'execute_script',\n",
+       " 'file_detector',\n",
+       " 'file_detector_context',\n",
+       " 'find_element',\n",
+       " 'find_elements',\n",
+       " 'forward',\n",
+       " 'fullscreen_window',\n",
+       " 'get',\n",
+       " 'get_cookie',\n",
+       " 'get_cookies',\n",
+       " 'get_credentials',\n",
+       " 'get_issue_message',\n",
+       " 'get_log',\n",
+       " 'get_network_conditions',\n",
+       " 'get_pinned_scripts',\n",
+       " 'get_screenshot_as_base64',\n",
+       " 'get_screenshot_as_file',\n",
+       " 'get_screenshot_as_png',\n",
+       " 'get_sinks',\n",
+       " 'get_window_position',\n",
+       " 'get_window_rect',\n",
+       " 'get_window_size',\n",
+       " 'implicitly_wait',\n",
+       " 'launch_app',\n",
+       " 'log_types',\n",
+       " 'maximize_window',\n",
+       " 'minimize_window',\n",
+       " 'mobile',\n",
+       " 'name',\n",
+       " 'orientation',\n",
+       " 'page_source',\n",
+       " 'pin_script',\n",
+       " 'pinned_scripts',\n",
+       " 'port',\n",
+       " 'print_page',\n",
+       " 'quit',\n",
+       " 'refresh',\n",
+       " 'remove_all_credentials',\n",
+       " 'remove_credential',\n",
+       " 'remove_virtual_authenticator',\n",
+       " 'save_screenshot',\n",
+       " 'service',\n",
+       " 'session_id',\n",
+       " 'set_network_conditions',\n",
+       " 'set_page_load_timeout',\n",
+       " 'set_permissions',\n",
+       " 'set_script_timeout',\n",
+       " 'set_sink_to_use',\n",
+       " 'set_user_verified',\n",
+       " 'set_window_position',\n",
+       " 'set_window_rect',\n",
+       " 'set_window_size',\n",
+       " 'start_client',\n",
+       " 'start_desktop_mirroring',\n",
+       " 'start_session',\n",
+       " 'start_tab_mirroring',\n",
+       " 'stop_casting',\n",
+       " 'stop_client',\n",
+       " 'switch_to',\n",
+       " 'timeouts',\n",
+       " 'title',\n",
+       " 'unpin',\n",
+       " 'vendor_prefix',\n",
+       " 'virtual_authenticator_id',\n",
+       " 'window_handles']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(tmplist2[0].parent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d9a2f6a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "selenium.webdriver.remote.webelement.WebElement"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(tmplist2[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "30f18477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dir='auto' has a very high chance of being a part of dialogue\n",
+    "tmplist3 = driver.find_element(By.XPATH, \"//div[@dir='auto']\").parent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "33f624cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmpp = tmplist3.find_element(By.XPATH, \"//*[@role='navigation']//*[@aria-label='Chats']//*[@data-testid='mwthreadlist-item-open']//*[@role='gridcell']//*[@aria-current='false']\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "d819d7ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'瘦仙貝\\nYou: 你這個胖可愛\\n  ·\\n49m'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmpp.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "6cc33b98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chrome'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmplist3.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "301db861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp4 = tmplist3.find_elements(By.PARTIAL_LINK_TEXT, '/messages/t/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "1cafca69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ele in tmp4:\n",
+    "    print(ele.text)"
    ]
   },
   {
@@ -489,12 +867,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a6469620",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#aexport\n",
     "from functools import lru_cache\n",
     "# maxsize=1: 只能暫存一組帳號紀錄\n",
     "@lru_cache(maxsize=1)\n",
@@ -594,19 +972,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ed5ae64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "# Attention: it'll automatically logout when this function is over\n",
-    "def login(reset=False, cb_list=[]):\n",
+    "#aexport\n",
+    "# Attention: if you don't store the returned variable\n",
+    "# , it'll automatically logout after exiting this function\n",
+    "def login(reset=False, close_option=True, *args, **kwargs):\n",
     "    usr, pwd = get_info(reset=reset)\n",
+    "    from time import sleep\n",
     "    from selenium import webdriver\n",
     "    from webdriver_manager.chrome import ChromeDriverManager\n",
-    "    from time import sleep\n",
-    "    driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "    from selenium.webdriver.chrome.options import Options\n",
+    "    option_ = Options()\n",
+    "    if close_option == True:\n",
+    "        option_.add_argument(\"disable-notifications\")\n",
+    "    driver = webdriver.Chrome(ChromeDriverManager().install(), options=option_, *args, **kwargs)\n",
     "    driver.get('https://www.facebook.com/')\n",
     "    print (\"Opened facebook\")\n",
     "    sleep(1)\n",
@@ -624,20 +1007,12 @@
     "    login_box.click()\n",
     "    print (\"Login Done\")\n",
     "    sleep(1)\n",
-    "    # loop through cb_list here\n",
-    "    # cb_list: list of name of the functions to be executed:\n",
-    "    # aka, a list of string\n",
-    "    # e.g., download conversation, ....\n",
-    "    for ele in cb_list:\n",
-    "        #TODO how do we call function via string\n",
-    "        # since directly input functions\n",
-    "        pass\n",
-    "    return True\n"
+    "    return driver\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a6270adc",
    "metadata": {},
    "outputs": [
@@ -652,8 +1027,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-14-371de27dc207>:7: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
+      "<ipython-input-2-a509a4811e86>:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(ChromeDriverManager().install(), options=option_, *args, **kwargs)\n"
      ]
     },
     {
@@ -665,25 +1040,15 @@
       "Password entered\n",
       "Login Done\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "login()"
+    "driver = login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3cf2bc0b",
    "metadata": {},
    "outputs": [
@@ -699,7 +1064,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-14-371de27dc207>:7: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "<ipython-input-2-c19e959c5591>:9: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -716,16 +1081,17 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "<selenium.webdriver.chrome.webdriver.WebDriver (session=\"d836133f380bd002c3dc05b80837594c\")>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# reset works \n",
+    "# also, we didn't store the return value, it will probably close the webpage automatically\n",
     "login(True)"
    ]
   },
