這才是最新版
用這個跑就對了，記得每換一個表情符號那個存檔的黨名就要改一個，不然會一直洗掉

--- a/PLURK/Plurk_Steal_Data.ipynb
+++ b/PLURK/Plurk_Steal_Data.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1def265a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-7df73a8bdc26>:16: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(ChromeDriverManager().install(), options=optionla)\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from time import sleep\n",
@@ -69,10 +85,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6a8b36a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "不合條件\n",
+      "1\n",
+      "不合條件\n",
+      "2\n",
+      "不合條件\n",
+      "3\n",
+      "可惜了\n",
+      "4\n",
+      "[['愛跟尾形玩躲貓貓的武悠', '今天見面的網友說自己身高177公分，結果走在我旁邊他矮我大概半個頭吧😀我今天還很客氣穿了平底的帆布鞋。\\n\\n本來身高就是完全不在我考慮範圍內的條件。只是因為我的身高跟男生很接近，而且我也不謊報，站在我旁邊的瞬間就會知道對方有沒有說謊，然後我很介意說謊。\\n\\n說謊是以自己的感受為最優先、不顧慮對方知的權利的行為，在這種前提下沒必要繼續來往了吧。何況還不是我主動問的（我就無所謂），主動講一個容易被戳破的假情報到底有什麼意思？難道日本妹都分不清楚男生的身高嗎？ '], ['姊鷗 RamenFairy', '我朋友的男友號稱178 但我們站在一起都差不多高XD話す'], ['愛跟尾形玩躲貓貓的武悠', '姊鷗 RamenFairy: 接受駝背這個理由嗎？178跟你之間還勉強可以，跟我真的太遠 ']]\n",
+      "5\n",
+      "不合條件\n",
+      "6\n",
+      "不合條件\n",
+      "7\n",
+      "[['Ona ', '最近是水逆是不是 公司昨天才被找碴心情已經很down\\n結果隔天朋友讓我更煩😇\\n我提前一個月跟以前同學約生日聚餐，一開始都說好\\n然後中秋也約，卻有個冒出來說只想花一次錢，堅持聚餐pass\\n約烤肉 餐廳選5間 她說想吃A我們就選A\\n為了幫她省還挪到下個月她生日吃\\n\\n結果又提議她想唱歌\\n一樣只想唱歌 聚餐pass\\n\\n另一個朋友2號因為男友聚餐那天不能到也附和\\n（我一開始約還問她男友哪週有空，我約那週了之後再跟我說沒空😀？）\\n\\n好喔 乾脆都不要約 我生日聚餐我自己取消😊 你不care我 但我要care妳的意思😀？ 真的本年度最靠北 幹'], ['ReIris ', '你整個被塑膠'], ['Ona ', 'ReIris: 被旋轉 幹']]\n",
+      "8\n",
+      "[['淩雨🌱ヒカルの碁 ', '一樣的嘴砲那個募😀'], ['掰噗~說', '中肯!!'], ['淩雨🌱ヒカルの碁 ', 'ಠ_ಠ - #原子少年 關於金星募資計畫，看到很多人因為🍎的語氣及用詞而火大，好像就打消了募資念頭。 但...']]\n",
+      "9\n",
+      "不合條件\n",
+      "10\n",
+      "不合條件\n",
+      "11\n",
+      "不合條件\n",
+      "12\n",
+      "不合條件\n",
+      "13\n",
+      "不合條件\n",
+      "14\n",
+      "不合條件\n",
+      "15\n",
+      "可惜了\n",
+      "16\n",
+      "可惜了\n",
+      "17\n",
+      "[['吱吱理樹🏰推しは推せる時に推せ', '♪AMATERRAS / KARAKURI\\n♪メロディーフラッグ / 4U\\n♪LOVE AND DEVIL / 4U\\n😀話す'], ['掰噗~', '呱呱話す'], ['吱吱理樹🏰推しは推せる時に推せ', '♪FUNBARE☆RUNNER / 777☆SISTERS ']]\n",
+      "18\n",
+      "不合條件\n",
+      "19\n",
+      "可惜了\n",
+      "20\n",
+      "不合條件\n",
+      "21\n",
+      "可惜了\n",
+      "22\n",
+      "不合條件\n",
+      "23\n",
+      "可惜了\n",
+      "24\n",
+      "不合條件\n",
+      "25\n",
+      "不合條件\n",
+      "26\n",
+      "不合條件\n",
+      "27\n",
+      "不合條件\n",
+      "28\n",
+      "不合條件\n",
+      "29\n",
+      "不合條件\n",
+      "30\n",
+      "不合條件\n",
+      "31\n",
+      "不合條件\n",
+      "32\n",
+      "可惜了\n",
+      "33\n",
+      "不合條件\n",
+      "34\n",
+      "不合條件\n",
+      "35\n",
+      "不合條件\n",
+      "36\n",
+      "可惜了\n",
+      "37\n",
+      "不合條件\n",
+      "38\n",
+      "可惜了\n",
+      "39\n",
+      "可惜了\n",
+      "40\n",
+      "不合條件\n",
+      "41\n",
+      "不合條件\n",
+      "42\n",
+      "不合條件\n",
+      "43\n",
+      "不合條件\n",
+      "44\n",
+      "不合條件\n",
+      "45\n",
+      "不合條件\n",
+      "46\n",
+      "可惜了\n",
+      "47\n",
+      "不合條件\n",
+      "48\n",
+      "不合條件\n",
+      "49\n",
+      "[['杯子蛋糕民🍒綺亞 ', '哲翔真的😀😀\\n李承隆我大哥ㄟ，cp 粉頭了吧'], ['Jiu ', '李承隆真ㄉ我大哥，我尊敬他\\U0001f979'], ['杯子蛋糕民🍒綺亞 ', 'Jiu:cp 粉頭']]\n",
+      "50\n",
+      "不合條件\n",
+      "51\n",
+      "不合條件\n",
+      "52\n",
+      "[['嗑糖嗑到瘋掉 ', '奇怪 明明已經結束考試了\\n但是為什麼我感覺\\n根本沒休息到\\n更忙耶 開不完的會 研習 一堆迎面而來的工作\\n😀\\n好的 為了我的追星基金 我繼續\\n努力工作'], ['Haaaaaa ', '你要開啥會'], ['嗑糖嗑到瘋掉 ', 'Haaaaaa: 應該說是無止境的研習 我都稱他為開會🤣']]\n",
+      "53\n",
+      "不合條件\n",
+      "54\n",
+      "不合條件\n",
+      "55\n",
+      "可惜了\n",
+      "56\n",
+      "不合條件\n",
+      "57\n",
+      "不合條件\n",
+      "58\n",
+      "不合條件\n",
+      "59\n",
+      "不合條件\n",
+      "60\n",
+      "可惜了\n",
+      "61\n",
+      "不合條件\n",
+      "62\n",
+      "不合條件\n",
+      "63\n",
+      "不合條件\n",
+      "64\n",
+      "[['小顏🌈ずっと一緒 ', '今日早操😄😃😀😆4個都係咁快樂可愛死我'], ['掰噗~講', ''], ['小顏🌈ずっと一緒 ', '不破最矮笑死']]\n",
+      "65\n",
+      "可惜了\n",
+      "66\n",
+      "不合條件\n",
+      "67\n",
+      "[['🦁🐰捲 ', '#BJYX 大半夜靠北一下臭馬桶唯粉😅\\ncp粉繪師畫18p生賀漫畫，被唯粉靠北遲到，還說怠慢敷衍😅\\n還說單人生賀怎麼夾帶另一個人…？ cp粉生賀畫雙人怎麼了嗎😀'], ['掰噗~說', '真糟'], ['🦁🐰捲 ', '哇 以為畫漫畫很容易是嗎😅😅😅😅\\n連個屁都畫不出來的還敢靠北']]\n",
+      "68\n",
+      "不合條件\n",
+      "69\n",
+      "不合條件\n",
+      "70\n",
+      "可惜了\n",
+      "71\n",
+      "不合條件\n",
+      "72\n",
+      "不合條件\n",
+      "73\n",
+      "[['Yaki', '\\U0001f972😂😂👌😀🎋➕🤪🤏😃💧😃💧⭐️😂🖐\\U0001f972👋😂🙏😮🎉🙏☠️😯☠️🙇\\u200d♀️🔥🎊🥺🎊🥺🙇\\u200d♂️😁😇😯\\U0001f972😀😃🙃😃🙃🙇\\u200d♂️ '], ['米津祺祺-立誓成為精靈般的女子', '上班內心世界心酸血淚史 '], ['Yaki', '米津祺祺-立誓成為精靈般的女子:  ']]\n",
+      "74\n",
+      "不合條件\n",
+      "75\n",
+      "[['JustBeJoyful的小號 ', '[非關語意]\\n[少女時代]\\n崔：(帕尼)就傳了一個「有點憂鬱」的訊息然後就聯絡不上了，所以就衝進他家結果發現他在睡覺，真的是..要*他還是放過他😀\\n帕尼：但那之後我就沒有這樣了\\n崔：不過是因為那天有發生什麼事，他也不是常常這樣的啦\\n崔：我也有衝進孝淵家過\\n太：他把大家家門密碼都背起來了\\n崔：那天他也聯絡不上，嚇到的是他連房門都鎖起來了…所以我到底要*他還是救他😀他那天是在洗澡\\n孝甩著剛洗完的秀髮：有什麼事嗎？🥰🥰\\n--\\n可能因為經歷過很多，所以對這種事的敏感度比較高吧😢有秀英這樣為他人著想、直接衝到家裡關心的朋友真好，希望大家的生理心理都能健康🙏 影片1-1\\nNnnozz🐻 on Twitter\\n影片1-2\\nNnnozz🐻 on Twitter'], ['hoswo ', '崔秀英真的好帥'], ['JustBeJoyful的小號 ', 'hoswo: 真的超帥，當下一定很慌吧，但真的很感謝她這麼做了']]\n",
+      "76\n",
+      "不合條件\n",
+      "77\n",
+      "不合條件\n",
+      "78\n",
+      "可惜了\n",
+      "79\n",
+      "不合條件\n",
+      "80\n",
+      "可惜了\n",
+      "81\n",
+      "可惜了\n",
+      "82\n",
+      "可惜了\n",
+      "83\n",
+      "不合條件\n",
+      "84\n",
+      "可惜了\n",
+      "85\n",
+      "不合條件\n",
+      "86\n",
+      "不合條件\n",
+      "87\n",
+      "不合條件\n",
+      "88\n",
+      "可惜了\n",
+      "89\n",
+      "[['Musichastudio ', '今天....我們第一次公開我們的工作場景以及真面目...\\n\\n是的，我們真的是野兔！！兔子用兔子電腦本來就是很自然不過的 Pe..ko.... 😀'], ['見習魔法師Osiris ', '好油ㄛpeko'], ['Musichastudio ', '見習魔法師Osiris: almondo~ almondo~']]\n",
+      "90\n",
+      "不合條件\n",
+      "91\n",
+      "可惜了\n",
+      "92\n",
+      "可惜了\n",
+      "93\n",
+      "可惜了\n",
+      "94\n",
+      "不合條件\n",
+      "95\n",
+      "可惜了\n",
+      "96\n",
+      "可惜了\n",
+      "97\n",
+      "可惜了\n",
+      "98\n",
+      "可惜了\n",
+      "99\n",
+      "[['☀臥工作做不完☀ ', 'COS速\\n\\n\\n\\n感謝三年前也幫我們拍拍庫洛魔法使的堤卡❤️\\n也感謝小精靈染音寶貝😘😘😘\\n-\\n我們終於拍ㄌ童年小情侶🥺\\n我這套真的多災多難....而且當天我跟小苑一個褲子破掉一個衣服破掉，我可能是被庫洛牌詛咒ㄌ.......(。\\n收照的時候好幾張越看越覺得桃矢應該正在提刀前來的路上😀(。\\n\\n(直接複製FB內文<'], ['咻咻★ ', '乾你們超可愛'], ['☀臥工作做不完☀ ', '咻咻★: 齁~~~謝咻咻\\n歡迎回來油腐ㄉ世界 (乾']]\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "#自動化流程，跑這個就對了\n",
     "t = 0\n",
@@ -101,15 +324,48 @@
     "            #\"text1\":testtext1,\n",
     "            #\"text2\":testtext2\n",
     "        #}\n",
-    "        TD = [[testuser0,testtext0],[testuser1,testtext1],[testuser2,testtext2]]\n",
-    "        print(TD)\n",
-    "        final.append(TD)\n",
+    "        if testuser0==testuser2 and testuser0!=testuser1:\n",
+    "            TD = [[testuser0,testtext0],[testuser1,testtext1],[testuser2,testtext2]]\n",
+    "            print(TD)\n",
+    "            final.append(TD)\n",
+    "        else:\n",
+    "            print(\"可惜了\")\n",
     "    except:\n",
     "        print(\"不合條件\")\n",
     "    driver.find_element(By.CSS_SELECTOR, \"[class='cbox_close pif-cancel']\").click()\n",
     "    t+=1\n",
-    "    print(t)"
+    "    print(t)\n",
+    "with open(\"grinningface.json\",'w', encoding = 'utf-8') as yyyyy:\n",
+    "    json.dump(final,yyyyy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0019c74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['愛跟尾形玩躲貓貓的武悠', '今天見面的網友說自己身高177公分，結果走在我旁邊他矮我大概半個頭吧😀我今天還很客氣穿了平底的帆布鞋。\\n\\n本來身高就是完全不在我考慮範圍內的條件。只是因為我的身高跟男生很接近，而且我也不謊報，站在我旁邊的瞬間就會知道對方有沒有說謊，然後我很介意說謊。\\n\\n說謊是以自己的感受為最優先、不顧慮對方知的權利的行為，在這種前提下沒必要繼續來往了吧。何況還不是我主動問的（我就無所謂），主動講一個容易被戳破的假情報到底有什麼意思？難道日本妹都分不清楚男生的身高嗎？ '], ['姊鷗 RamenFairy', '我朋友的男友號稱178 但我們站在一起都差不多高XD話す'], ['愛跟尾形玩躲貓貓的武悠', '姊鷗 RamenFairy: 接受駝背這個理由嗎？178跟你之間還勉強可以，跟我真的太遠 ']], [['Ona ', '最近是水逆是不是 公司昨天才被找碴心情已經很down\\n結果隔天朋友讓我更煩😇\\n我提前一個月跟以前同學約生日聚餐，一開始都說好\\n然後中秋也約，卻有個冒出來說只想花一次錢，堅持聚餐pass\\n約烤肉 餐廳選5間 她說想吃A我們就選A\\n為了幫她省還挪到下個月她生日吃\\n\\n結果又提議她想唱歌\\n一樣只想唱歌 聚餐pass\\n\\n另一個朋友2號因為男友聚餐那天不能到也附和\\n（我一開始約還問她男友哪週有空，我約那週了之後再跟我說沒空😀？）\\n\\n好喔 乾脆都不要約 我生日聚餐我自己取消😊 你不care我 但我要care妳的意思😀？ 真的本年度最靠北 幹'], ['ReIris ', '你整個被塑膠'], ['Ona ', 'ReIris: 被旋轉 幹']], [['淩雨🌱ヒカルの碁 ', '一樣的嘴砲那個募😀'], ['掰噗~說', '中肯!!'], ['淩雨🌱ヒカルの碁 ', 'ಠ_ಠ - #原子少年 關於金星募資計畫，看到很多人因為🍎的語氣及用詞而火大，好像就打消了募資念頭。 但...']], [['吱吱理樹🏰推しは推せる時に推せ', '♪AMATERRAS / KARAKURI\\n♪メロディーフラッグ / 4U\\n♪LOVE AND DEVIL / 4U\\n😀話す'], ['掰噗~', '呱呱話す'], ['吱吱理樹🏰推しは推せる時に推せ', '♪FUNBARE☆RUNNER / 777☆SISTERS ']], [['杯子蛋糕民🍒綺亞 ', '哲翔真的😀😀\\n李承隆我大哥ㄟ，cp 粉頭了吧'], ['Jiu ', '李承隆真ㄉ我大哥，我尊敬他\\U0001f979'], ['杯子蛋糕民🍒綺亞 ', 'Jiu:cp 粉頭']], [['嗑糖嗑到瘋掉 ', '奇怪 明明已經結束考試了\\n但是為什麼我感覺\\n根本沒休息到\\n更忙耶 開不完的會 研習 一堆迎面而來的工作\\n😀\\n好的 為了我的追星基金 我繼續\\n努力工作'], ['Haaaaaa ', '你要開啥會'], ['嗑糖嗑到瘋掉 ', 'Haaaaaa: 應該說是無止境的研習 我都稱他為開會🤣']], [['小顏🌈ずっと一緒 ', '今日早操😄😃😀😆4個都係咁快樂可愛死我'], ['掰噗~講', ''], ['小顏🌈ずっと一緒 ', '不破最矮笑死']], [['🦁🐰捲 ', '#BJYX 大半夜靠北一下臭馬桶唯粉😅\\ncp粉繪師畫18p生賀漫畫，被唯粉靠北遲到，還說怠慢敷衍😅\\n還說單人生賀怎麼夾帶另一個人…？ cp粉生賀畫雙人怎麼了嗎😀'], ['掰噗~說', '真糟'], ['🦁🐰捲 ', '哇 以為畫漫畫很容易是嗎😅😅😅😅\\n連個屁都畫不出來的還敢靠北']], [['Yaki', '\\U0001f972😂😂👌😀🎋➕🤪🤏😃💧😃💧⭐️😂🖐\\U0001f972👋😂🙏😮🎉🙏☠️😯☠️🙇\\u200d♀️🔥🎊🥺🎊🥺🙇\\u200d♂️😁😇😯\\U0001f972😀😃🙃😃🙃🙇\\u200d♂️ '], ['米津祺祺-立誓成為精靈般的女子', '上班內心世界心酸血淚史 '], ['Yaki', '米津祺祺-立誓成為精靈般的女子:  ']], [['JustBeJoyful的小號 ', '[非關語意]\\n[少女時代]\\n崔：(帕尼)就傳了一個「有點憂鬱」的訊息然後就聯絡不上了，所以就衝進他家結果發現他在睡覺，真的是..要*他還是放過他😀\\n帕尼：但那之後我就沒有這樣了\\n崔：不過是因為那天有發生什麼事，他也不是常常這樣的啦\\n崔：我也有衝進孝淵家過\\n太：他把大家家門密碼都背起來了\\n崔：那天他也聯絡不上，嚇到的是他連房門都鎖起來了…所以我到底要*他還是救他😀他那天是在洗澡\\n孝甩著剛洗完的秀髮：有什麼事嗎？🥰🥰\\n--\\n可能因為經歷過很多，所以對這種事的敏感度比較高吧😢有秀英這樣為他人著想、直接衝到家裡關心的朋友真好，希望大家的生理心理都能健康🙏 影片1-1\\nNnnozz🐻 on Twitter\\n影片1-2\\nNnnozz🐻 on Twitter'], ['hoswo ', '崔秀英真的好帥'], ['JustBeJoyful的小號 ', 'hoswo: 真的超帥，當下一定很慌吧，但真的很感謝她這麼做了']], [['Musichastudio ', '今天....我們第一次公開我們的工作場景以及真面目...\\n\\n是的，我們真的是野兔！！兔子用兔子電腦本來就是很自然不過的 Pe..ko.... 😀'], ['見習魔法師Osiris ', '好油ㄛpeko'], ['Musichastudio ', '見習魔法師Osiris: almondo~ almondo~']], [['☀臥工作做不完☀ ', 'COS速\\n\\n\\n\\n感謝三年前也幫我們拍拍庫洛魔法使的堤卡❤️\\n也感謝小精靈染音寶貝😘😘😘\\n-\\n我們終於拍ㄌ童年小情侶🥺\\n我這套真的多災多難....而且當天我跟小苑一個褲子破掉一個衣服破掉，我可能是被庫洛牌詛咒ㄌ.......(。\\n收照的時候好幾張越看越覺得桃矢應該正在提刀前來的路上😀(。\\n\\n(直接複製FB內文<'], ['咻咻★ ', '乾你們超可愛'], ['☀臥工作做不完☀ ', '咻咻★: 齁~~~謝咻咻\\n歡迎回來油腐ㄉ世界 (乾']]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"grinningface.json\",'r',encoding = 'utf-8') as ddddd:\n",
+    "    fuckers = json.load(ddddd)\n",
+    "print(fuckers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "645f849d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
