--- a/EmoAppVer1/README
+++ b/EmoAppVer1/README
@@ -7,3 +7,22 @@ Using steps:
 3. From cmd, enter the file, then command "python app.py"
 4. enter the local url printed on the cmd. By default, it should be "127.0.0.5000"
 5. Start using the Web APP!
+
+---------------------------------------------------------------------------------------------
+歡迎使用EMO-AI Web APP Version 1！使用步驟如下：
+1. 下載整個資料夾
+2. 下載使用程式所需要的所有套件，詳細列表可以參考app.py文件中最一開始的列表
+3. 開啟命令提示字元，進入下載好的資料夾，輸入"python app.py"
+4. 此時畫面上將會顯示Web APP連線上的網址，用Chrome將此網址打開。[預設為127.0.0.5000]
+5. 連線成功，便可以開始使用！
+
+---------------------------------------------------------------------------------------------
+#使用小細節：
+1. 根據網速不同，有時候載入會比較慢，所以如果跳出錯誤訊息或連線不上時，請重整頁面，通常就會正常顯示
+2. 如果一直重整都不成功，請重新開啟EMO-AI Web APP，有可能是FB帳密輸入錯誤
+3. 輸入聊天對象時，請輸入聊天對象的FB名稱(且強烈建議雙方的FB介面都設定為中文版面！)；如果對方有設定暱稱，請輸入暱稱搜尋
+4. 進入聊天室後，送出訊息可以使用下方的輸入與送出，也可以使用另外的手機/網頁正常開啟FB進行對話(我們建議後者，比較快)，網頁都會進行更新
+5. 情緒波動的看法為：綠色小點是前一句話說完之後，聊天室雙方的情緒；紅色小點則是當前這句話說完之後，聊天室雙方的情緒。由此可以看出雙方情緒的波動
+6. 想要換對象聊天時，請點選上方的搜尋對話；想要離開時，直接關閉視窗即可。
+
+--------------------------------------------------------------------------------------------
