--- a/emo_nbs/EMOAI_EmotionLoopModel_DataProcess_Training.ipynb
+++ b/emo_nbs/EMOAI_EmotionLoopModel_DataProcess_Training.ipynb
@@ -77,15 +77,15 @@
    "outputs": [],
    "source": [
     "for singlefile in onlyfiles:\n",
-    "    with open(join(mypath,singlefile),'r') as fuckerfiles:\n",
+    "    with open(join(mypath,singlefile),'r') as happyfiles:\n",
     "        print(singlefile)\n",
-    "        theopenedfile = json.load(fuckerfiles)\n",
+    "        theopenedfile = json.load(happyfiles)\n",
     "        for i in range(0,len(theopenedfile)):\n",
     "            transient = []\n",
     "            for j in range(0,3):\n",
     "                transient.append(theopenedfile[i][j][1])\n",
     "            puredata.append(transient)\n",
-    "        fuckerfiles.close()\n"
+    "        happyfiles.close()\n"
    ]
   },
   {
