--- a/emo_nbs/EMOAI_EmotionLoopModel_DataProcess_Training.ipynb
+++ b/emo_nbs/EMOAI_EmotionLoopModel_DataProcess_Training.ipynb
@@ -51,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(join(mypath,'Fearful face.json'),'r') as fuckerfile:\n",
-    "    theopenfile = json.load(fuckerfile)\n",
+    "with open(join(mypath,'Fearful face.json'),'r') as happyfile:\n",
+    "    theopenfile = json.load(happyfile)\n",
     "    ttt = []\n",
     "    for k in range(0,3):\n",
     "        print(theopenfile[80][k])\n",
